# tbclient

./: .gitignore  CMakeLists.txt  PROVISIONING.md  PROVISIONING_CHECKLIST.md  PROVISIONING_INTEGRATION.md  PROVISIONING_SUMMARY.md  README.md  control.md  provision.example.json  thermal_config.example.json  thermal_config.json
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
config/: config.example.json
include/common/: error_handler.h  logger.h
include/config/: configuration.h  provisioning.h
include/mqtt/: client.h  mock_client.h  paho_c_client.h  paho_client.h
include/provisioning/: workflow.h
include/thermal/: measurement_spot.h  temperature_reading.h
include/thermal/rpc/: thermal_rpc_handler.h
include/thermal/spot_manager/: spot_persistence.h  thermal_spot_manager.h
include/thermal/temperature_source/: coordinate_based_source.h  temperature_data_source.h  temperature_source_factory.h
include/thingsboard/: device.h  device_old.h  mock_device.h  provisioning.h
include/thingsboard/rpc/: rpc_command_queue.h  rpc_parser.h  rpc_timeout_manager.h  rpc_types.h
include/utils/: file_utils.h
specs/001-thermal-mqtt-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-thermal-mqtt-client/checklists/: requirements.md
specs/001-thermal-mqtt-client/contracts/: mqtt-protocol.md
specs/002-device-provisioning/: data-model.md  plan.md  quality-checklist.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-device-provisioning/contracts/: configuration-schema.md  mqtt-provisioning.md
specs/003-thermal-spot-rpc/: INTEGRATION_ANALYSIS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-thermal-spot-rpc/checklists/: requirements.md
specs/003-thermal-spot-rpc/contracts/: rpc-api.md
src/: main.cpp  main_config_test.cpp  main_continuous.cpp  main_paho.cpp
src/common/: error_handler.cpp  logger.cpp
src/config/: configuration.cpp  provisioning.cpp
src/mqtt/: client.cpp  mock_client.cpp  paho_c_client.cpp  paho_client.cpp
src/provisioning/: workflow.cpp
src/thermal/: measurement_spot.cpp  temperature_reading.cpp
src/thermal/rpc/: thermal_rpc_handler.cpp
src/thermal/spot_manager/: spot_persistence.cpp  thermal_spot_manager.cpp
src/thermal/temperature_source/: coordinate_based_source.cpp  temperature_data_source.cpp  temperature_source_factory.cpp
src/thingsboard/: device.cpp  device_old.cpp  mock_device.cpp  paho_device.cpp  paho_device_backup.cpp  provisioning.cpp
src/thingsboard/rpc/: rpc_command_queue.cpp  rpc_parser.cpp  rpc_timeout_manager.cpp  rpc_types.cpp
src/utils/: file_utils.cpp
tests/integration/: test_connection.cpp  test_multi_spot.cpp
tests/integration/thermal/: test_simulator_extension.cpp
tests/integration/thingsboard/: test_create_spot_rpc.cpp
tests/thermal/manager/: test_thermal_spot_manager.cpp
tests/thermal/rpc/: test_create_spot_measurement_integration.cpp
tests/unit/: test_measurement_spot.cpp  test_mqtt_client.cpp  test_temperature_reading.cpp  test_thingsboard_device.cpp
